sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:6: error: '(' expected but identifier found.
      if plusPetit(i+1,i){
         ^AlgGnomeSort:10: error: illegal start of simple expression
    }
    ^